# RabbitMirror

./: .flake8  .gitignore  .pre-commit-config.yaml  .rabbitmirror_config.json  CHANGELOG.md  CODEBASE_SUMMARY.md  COMPREHENSIVE_ERROR_HANDLING.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_PUBLICATION_SUMMARY.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  PUBLICATION_PACKAGE.md  PUBLICATION_READINESS_REPORT.md  README.md  Runfile  TESTING_RESULTS.md  TUI_GUIDE.md  TUI_QUICK_REFERENCE.md  WEB_INTERFACE.md  activate_rabbitmirror.sh  bandit_results.json  codex.py  demo_results.json  lets.yaml  mypy.ini  parse_watch_history.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py  simple_tui.css  test_coverage_check.py  test_rabbitmirror_tui.py  test_tui.py
.github/workflows/: ci.yml  publish.yml  quality.yml  test.yml
benchmark_results/clustering/: benchmark_report_20250714_150007.json  benchmark_report_20250714_150014.json  benchmark_report_20250714_150015.json  benchmark_report_20250714_150033.json  benchmark_report_20250714_150034.json  benchmark_report_20250714_150042.json  benchmark_report_20250714_150048.json  benchmark_report_20250714_150050.json  benchmark_report_20250714_150107.json  benchmark_report_20250714_150108.json
benchmark_results/parser/: benchmark_report_20250711_003955.json  benchmark_report_20250711_003957.json  benchmark_report_20250711_003959.json  benchmark_report_20250711_004051.json  benchmark_report_20250711_004053.json  benchmark_report_20250711_004055.json  benchmark_report_20250711_004058.json  benchmark_report_20250711_004130.json  benchmark_report_20250711_004132.json  benchmark_report_20250711_004134.json  benchmark_report_20250711_004137.json  benchmark_report_20250711_004138.json  benchmark_report_20250714_150118.json  benchmark_report_20250714_150122.json  benchmark_report_20250714_150126.json  benchmark_report_20250714_150133.json  benchmark_report_20250714_150135.json  benchmark_report_20250714_150145.json  benchmark_report_20250714_150149.json  benchmark_report_20250714_150153.json  benchmark_report_20250714_150200.json  benchmark_report_20250714_150202.json
benchmarks/: test_clustering_performance.py  test_parser_performance.py  utils.py
codex/: codex.py
comprehensive_dashboard/: dashboard.css
dashboard_output/: dashboard.css
docs/: FAQ.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: error_recovery.rst  index.rst  parser.rst
docs/tutorials/: 01_getting_started.md  02_advanced_usage.md  comprehensive_error_handling.md
examples/datasets/: sample_config.yaml  sample_parsed_data.json
rabbitmirror/: __init__.py  adversarial_profiler.py  cli.py  cluster_engine.py  config_manager.py  dashboard_generator.py  error_recovery.py  exceptions.py  export_formatter.py  parser.py  profile_simulator.py  qr_generator.py  report_generator.py  schema_validator.py  suppression_index.py  symbolic_logger.py  trend_analyzer.py  tui.css  tui.py
rabbitmirror/web/: app.py
rabbitmirror/web/static/css/: style.css
scripts/: release.sh
tests/: __init__.py  conftest.py  test_adversarial_profiler.py  test_adversarial_profiler_additional.py  test_adversarial_profiler_coverage.py  test_adversarial_profiler_enhanced.py  test_adversarial_profiler_helpers.py  test_cli.py  test_cli_coverage.py  test_cluster_engine.py  test_config_manager.py  test_dashboard_generator.py  test_error_handling_simple.py  test_error_recovery.py  test_error_recovery_timeout_fix.py  test_exceptions_comprehensive.py  test_export_formatter.py  test_parser.py  test_profile_simulator.py  test_qr_generator.py  test_report_generator.py  test_schema_validator.py  test_suppression_index.py  test_symbolic_logger.py  test_trend_analyzer.py
